# JuniorExamRepo

./: README.md  airport.airplanes.json  airport.departures.json  airport.id_counters.json  airport.landings.json  pyproject.toml
src/: app.py
src/controllers/: __init__.py  airport_controller.py
src/models/: __init__.py  departure.py
src/ui/: __init__.py  airport_cli.py
src1/: dash_app.py  routes_app.py
src1/controllers/: __init__.py  routes_controller.py
src1/models/: airplane.py  landing.py
src1/ui/: __init__.py  routes_cli.py
